Update print statement from 'Hello' to 'Goodbye'

--- a/nook-book2.html
+++ b/nook-book2.html
@@ -1,4 +1,10 @@
-  <!--top of page-->
+<!DOCTYPE html>
+<meta charset="UTF-8">
+<meta description="php/sql corruption and resolution simulation">
+<link rel="stylesheet" href="nook-book2.css">
+
+<body class="content">
+<!--top of page-->
     <header>
     <div class="bar">
       <div class="logo">
@@ -716,3 +722,4 @@
     </footer>
 </body>
 </html>
+
