--- a/part1: setup/index/nook-book2.html
+++ b/part1: setup/index/nook-book2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+I'm<!DOCTYPE html>
 <html>
 
 <head>
@@ -34,7 +34,7 @@
       
       <div class="profile-content">
         <div class="pfp">
-          <img src="part1: setup/pics/pfp.png" alt="Weezer" width="150" height="150">
+          <img src="pics/pfp.png" alt="Weezer" width="150" height="150">
         </div>
         <div class="bio">
         <p><b>Username:</b> Weezer</p><br>
